syntax = "proto3";
package identify;

import "github.com/fuserobotics/proto/common/common.proto";

/*
  A single message to verify identity.
*/
message Identify {
  common.CertChain cert_chain = 1;
  SignatureMode mode = 2;
  bytes signature = 3;
  int32 timestamp = 4;

  enum SignatureMode {
    CONTENTS = 0;
    TIMESTAMP = 1;
  }
}
